--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "FBRP",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://oscarthedevpatel.github.io/fbrp",
+  "homepage": "https://freebaseredpill.biz",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.10",
